Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110695

SkyBoxCubeMap does not work (regression from 6.4)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.4.3, 6.5.0, 6.6.0
    • 6.5.0 Beta2, 6.6
    • Quick: 3D
    • None
    • 7db889a65 (dev), 34a0c1d0b (6.5), 325696b9a (6.4), 7716a5991 (dev), ab6be7da5 (6.5), bd38606bd (6.4)

    Description

      Setting  SceneEnvironment.skyBoxCubeMap to  skyboxTexture stopped working somewhere between 6.4.2 and 6.5

      Attachments

        For Gerrit Dashboard: QTBUG-110695
        # Subject Branch Project Status CR V

        Activity

          People

            inho Inho Lee
            tvete Paul Olav Tvete
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes