Fix the CubeRenderer

Setting of the graphics pipeline was accidentally removed in
dadd7ac369f72.

Fixes: QTBUG-110695
Pick-to: 6.5 6.4
Change-Id: I3783a6221d15119a8993ca88e0b26e3b7d9f1b35
Reviewed-by: Christian Strømme <christian.stromme@qt.io>